fix: home page overflow x (#192)

--- a/styles/themes/global.styl
+++ b/styles/themes/global.styl
@@ -26,3 +26,6 @@ html.dark
   --secondary: #000
   --logo-color: #fff
   --divider-color: rgba(61, 61, 61, 1)
+
+html
+  overflow-x: hidden
